remove empty value key in dict

--- a/AnsibleWorkShop/project/debug/ConvertTo-String.yml
+++ b/AnsibleWorkShop/project/debug/ConvertTo-String.yml
@@ -6,19 +6,35 @@
     - name: mainpulate query parameter
       ansible.builtin.set_fact:
         # https://www.techbeatly.com/ansible-convert-list-to-string/
-        query_param_string: "{{ query_param_list | join('&') }}"
+        # query_param_string: "{{ query_param_list | join('&') }}"
+
         # https://stackoverflow.com/questions/62239167/how-to-format-a-dict-to-a-string-in-ansible
         # https://docs.ansible.com/ansible/latest/collections/ansible/builtin/zip_filter.html
         # https://jinja.palletsprojects.com/en/3.0.x/templates/#jinja-filters.map
-        query_param_string2: "{{ query_param_dict.keys() | 
-                                  ansible.builtin.zip(query_param_dict.values()) |
-                                  map('join', '=') |
-                                  join('&') }}"
+        # query_param_string2: "{{ query_param_dict.keys() | 
+        #                           ansible.builtin.zip(query_param_dict.values() | default(omit) ) |
+        #                           map('join', '=') |
+        #                           join('&') }}"
+        # query_param_string2: "{{ query_param_dict | combine({item.key: item.value}) }}"
+        query_param_string2: "{{ {item.key: item.value} }}"
       vars:
         query_param_list:
           - logDriver=k8s-file
           - network=podman
         query_param_dict:
-          logDriver: k8s-file
-          network: podman
-    
+          logDriver: 
+          network: 
+      # https://stackoverflow.com/questions/50514383/ansible-remove-item-from-dict/57324251#57324251
+      loop: "{{ query_param_dict | dict2items }}"
+      when:
+        # https://groups.google.com/g/ansible-project/c/5zTRA4JZIvU
+        - item.value is not none
+
+    - name: set fact
+      set_fact:
+        query_param_string3: "{{ query_param_string2.keys() | 
+                                  ansible.builtin.zip(query_param_string2.values()) |
+                                  map('join', '=') |
+                                  join('&') }}"
+      when:
+        - query_param_string2 is defined
