--- a/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/defaults/main.yml
+++ b/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/defaults/main.yml
@@ -23,9 +23,12 @@ podman_volume: "{{ defaults_podman_volume | ansible.builtin.combine(vars_podman_
 
 # podman_play
 defaults_podman_play:
-  kube_file: # required, skip if empty
   state: # required, skip if empty
-  force: false
+  query_params:
+    delete:
+      force: false # boolean, false  ← (default) / true, Remove volumes.
+  request_body:
+    kube_file: # required, skip if empty
 
 podman_play: "{{ defaults_podman_play | ansible.builtin.combine(vars_podman_play, recursive=True) }}"
 
