update vars construct

--- a/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/defaults/main.yml
+++ b/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/defaults/main.yml
@@ -36,7 +36,9 @@ podman_play: "{{ defaults_podman_play | ansible.builtin.combine(vars_podman_play
 # podman_generate_systemd
 defaults_podman_generate_systemd:
   dest: /home/{{ ansible_user }}/.config/systemd/user/ # required, skip if empty
-  name: # required, skip if empty
+  path_params:
+    name: # required, skip if empty
+
 
 podman_generate_systemd: "{{ defaults_podman_generate_systemd | ansible.builtin.combine(vars_podman_generate_systemd, recursive=True) }}"
 
