--- a/AnsibleWorkShop/project/vars/podman_play-samba.yml
+++ b/AnsibleWorkShop/project/vars/podman_play-samba.yml
@@ -9,7 +9,10 @@ vars_podman_play:
     kube_file: /KubeWorkShop/Samba/aio-samba.yaml
 
 vars_podman_generate_systemd:
-  name: samba
+  path_params:
+    name: samba
+  query_params:
+    useName: true
 vars_service:
   podman_pod:
     user_scope:
