--- a/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanPlayRequest.yml
+++ b/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanPlayRequest.yml
@@ -30,7 +30,7 @@
     - name: Run Podman kube play
       ansible.builtin.uri:
         url: http://d/{{ api_version }}/libpod/play/kube{{ podman_play_query_params_POST_string | default('') }}
-        unix_socket: "{{ unix_socket }}"
+        unix_socket: "{{ podman_unix_socket | default(omit) }}"
         method: POST
         status_code: 
           - 200
@@ -82,7 +82,7 @@
     - name: Run podman kube down
       ansible.builtin.uri:
         url: http://d/{{ api_version }}/libpod/play/kube{{ podman_play_query_params_delete_definitive | default('') }}
-        unix_socket: "{{ unix_socket }}"
+        unix_socket: "{{ podman_unix_socket | default(omit) }}"
         method: DELETE
         status_code: 
           - 200
