--- a/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanNetworkRequest.yml
+++ b/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanNetworkRequest.yml
@@ -2,18 +2,18 @@
 ---
 - name: create podman network {{ podman_network.request_body.name }}
   ansible.builtin.uri:
-    url: http://d/{{ api_version }}/libpod/networks/create
-    unix_socket: "{{ podman_unix_socket | default(omit) }}"
+    url: "{{ podman_uri.host }}/{{ podman_uri.api_version }}/libpod/networks/create"
+    unix_socket: "{{ podman_uri.unix_socket | default(omit) }}"
     method: POST
-    status_code: 200
     body_format: json
-    body: "{{ podman_network.request_body }}"
+    body: "{{ podman_network.present.request_body }}"
+    status_code: 200
   when:
     - podman_network.state == "present"
 
 - name: delete podman network {{ podman_network.request_body.name }}
   ansible.builtin.uri:
-    url: http://d/{{ api_version }}/libpod/networks/{{ podman_network.request_body.name }}
-    unix_socket: "{{ podman_unix_socket | default(omit) }}"
+    url: "{{ podman_uri.host }}/{{ podman_uri.api_version }}/libpod/networks/{{ podman_network.name }}"
+    unix_socket: "{{ podman_uri.unix_socket | default(omit) }}"
     method: DELETE
     status_code: 200
