--- a/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanGenerateRequest.yml
+++ b/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanGenerateRequest.yml
@@ -2,12 +2,13 @@
 ---
 - name: Set pod systemd service when pod exist
   when:
+    - podman_generate_systemd.dest is defined
     - pod_info.json.Hostname is defined
     - service.podman_pod.user_scope.skipped is false
   block:
     - name: Clean up the podman_generate_systemd query params dict
       ansible.builtin.set_fact:
-        podman_generate_systemd_query_params_GET: "{{ {item.key: item.value} }}"
+        podman_generate_systemd_query_params: "{{ {item.key: item.value} }}"
       loop: "{{ podman_generate_systemd.query_params | dict2items }}"
       when:
         - podman_generate_systemd.query_params is defined
@@ -15,54 +16,92 @@
 
     - name: Convert query_params from dict to string for podman_generate_systemd
       ansible.builtin.set_fact:
-        podman_generate_systemd_query_params_GET_string: "?{{ podman_generate_systemd_query_params_GET.keys() | 
-                                                        ansible.builtin.zip(podman_generate_systemd_query_params_GET.values()) |
+        podman_generate_systemd_query_params_string: "?{{ podman_generate_systemd_query_params.keys() | 
+                                                        ansible.builtin.zip(podman_generate_systemd_query_params.values()) |
                                                         map('join', '=') |
                                                         join('&') }}"
       when: 
-        - podman_generate_systemd_query_params_GET is defined
+        - podman_generate_systemd_query_params is defined
 
     - name: Get pod systemd unit content
       ansible.builtin.uri:
-        url: http://d/{{ api_version }}/libpod/generate/{{ pod_id | default(podman_generate_systemd.path_params.name) }}/systemd{{ podman_generate_systemd_query_params_GET_string | default('')}}
+        url: "{{ podman_uri.host }}/{{ podman_uri.api_version }}/libpod/generate/{{ pod_id | default(podman_generate_systemd.path_params.name) }}/systemd{{ podman_generate_systemd_query_params_string | default('')}}"
         unix_socket: "{{ podman_unix_socket | default(omit) }}"
         method: GET
         status_code: 
           - 200
       register: podman_generate_systemd_respond
 
-    - name: Detect pod related unit file
-      ansible.builtin.stat:
-        path: "{{ [podman_generate_systemd.dest, item] | ansible.builtin.path_join }}"
+    - name: Create systemd unit file in /tmp
+      ansible.builtin.file:
+        path: "{{ ['/tmp', item.item] | ansible.builtin.path_join }}"
+        state: touch
+        mode: '0755'
       loop: "{{ podman_generate_systemd_respond.json.keys() | 
                 ansible.builtin.product(['.service']) | map('join') | list }}"
-      register: service_unit_to_create            
-
-    # - name: debug
-    #   debug:
-    #     msg: "{{ service_unit_to_create }}"
-
-    # https://luiscachog.io/using-the-ansible-stat-module-on-a-loop/
-    - name: Create systemd unit file if not exist
-      ansible.builtin.file:
-        path: "{{ [podman_generate_systemd.dest, item.item] | ansible.builtin.path_join }}"
-        state: "{{ 'file' if item.stat.exists else 'touch' }}"
-        mode: '0755'
-      loop: "{{ service_unit_to_create.results }}"
       when:
-        - podman_generate_systemd.dest is defined
         - podman_generate_systemd_respond.json is defined
-        
+      delegate_to: localhost
+      changed_when: false
+
     - name: Set systemd unit to file
       ansible.builtin.blockinfile:
-        path: "{{ [podman_generate_systemd.dest, item.key + '.service'] | ansible.builtin.path_join }}"
+        path: "{{ ['/tmp', item.key + '.service'] | ansible.builtin.path_join }}"
         marker: "# {mark} {{ role_name }}"
         block: "{{ item.value }}"
         state: present
       loop: "{{ podman_generate_systemd_respond.json | dict2items }}"
       when:
-        - podman_generate_systemd.dest is defined
         - podman_generate_systemd_respond.json is defined
+
+    - name: Copy systemd unit file to dest path
+      ansible.builtin.copy:
+        scr: "{{ ['/tmp', item.item] | ansible.builtin.path_join }}"
+        dest: "{{ [podman_generate_systemd.dest, item.item] | ansible.builtin.path_join }}"
+      loop: "{{ podman_generate_systemd_respond.json.keys() | 
+                ansible.builtin.product(['.service']) | map('join') | list }}"
+      when:
+        - podman_generate_systemd_respond.json is defined
+
+    - name: Delete systemd unit file in /tmp
+      ansible.builtin.file:
+        path: "{{ ['/tmp', item.item] | ansible.builtin.path_join }}"
+        state: absent
+      loop: "{{ podman_generate_systemd_respond.json.keys() | 
+                ansible.builtin.product(['.service']) | map('join') | list }}"
+      when:
+        - podman_generate_systemd_respond.json is defined
+      delegate_to: localhost
+      changed_when: false
+
+    # - name: Detect pod related unit file
+    #   ansible.builtin.stat:
+    #     path: "{{ [podman_generate_systemd.dest, item] | ansible.builtin.path_join }}"
+    #   loop: "{{ podman_generate_systemd_respond.json.keys() | 
+    #             ansible.builtin.product(['.service']) | map('join') | list }}"
+    #   register: service_unit_to_create            
+
+    # https://luiscachog.io/using-the-ansible-stat-module-on-a-loop/
+    # - name: Create systemd unit file if not exist
+    #   ansible.builtin.file:
+    #     path: "{{ [podman_generate_systemd.dest, item.item] | ansible.builtin.path_join }}"
+    #     state: "{{ 'file' if item.stat.exists else 'touch' }}"
+    #     mode: '0755'
+    #   loop: "{{ service_unit_to_create.results }}"
+    #   when:
+    #     - podman_generate_systemd.dest is defined
+    #     - podman_generate_systemd_respond.json is defined
+        
+    # - name: Set systemd unit to file
+    #   ansible.builtin.blockinfile:
+    #     path: "{{ [podman_generate_systemd.dest, item.key + '.service'] | ansible.builtin.path_join }}"
+    #     marker: "# {mark} {{ role_name }}"
+    #     block: "{{ item.value }}"
+    #     state: present
+    #   loop: "{{ podman_generate_systemd_respond.json | dict2items }}"
+    #   when:
+    #     - podman_generate_systemd.dest is defined
+    #     - podman_generate_systemd_respond.json is defined
 
     # https://stackoverflow.com/a/74475354
     - name: omit service.podman_pod.user_scope.state
